--- a/submission_7/football_DA.tex
+++ b/submission_7/football_DA.tex
@@ -158,7 +158,7 @@ Despite the evident links between alcohol and domestic abuse, the role alcohol p
 
 To test this hypothesis, we investigate whether the daily number of reported alcohol and non-alcohol related domestic abuse cases recorded by the third largest police force in England (West Midlands Police; WMP) between 2010 and 2019 increase on days when the England national team plays in a national football tournament (the FIFA World Cup and UEFA European Football Championship), and whether the effect, if any, depends on the result of the match.
 
- In these tournaments, England match days are allocated randomly (as the fixtures are determined through a random draw), making these events a suitable instrument for testing the casual effect of England matches on domestic abuse \AT{They will most certainly say that we can't say causal}. Our dataset covers a decade worth of crime data, allowing us to conduct a thorough investigation of the characteristics and temporal pattern of the domestic abuse perpetrated on England match days, and extend our findings to understand various characteristics of this relationship. We also test the robustness of the effect using various model specifications, time periods, and geographical areas. 
+ In these tournaments, England match days are allocated randomly (the randomization of fixture is ensured through a process of drawing balls from an urn), making these events a suitable instrument for testing the casual effect of England matches on domestic abuse \AT{They will most certainly say that we can't say causal}. Our dataset covers a decade worth of crime data, allowing us to conduct a thorough investigation of the characteristics and temporal pattern of the domestic abuse perpetrated on England match days, and extend our findings to understand various characteristics of this relationship. We also test the robustness of the effect using various model specifications, time periods, and geographical areas. 
 
 
 
@@ -414,7 +414,7 @@ Observations & 3,570 & 3,570 & 3,570 & 3,570 & 3,570 & 3,570 \\
 \subsection{Other types of sports: rugby}
 Does this effect generalise to other sporting events, or is it specific to football? It has been previously suggested that other popular sports, such as rugby have similar links with domestic abuse \cite{Brooks-Hay2018}. Rugby is the second most popular sport in England after football \cite{Ipsos2003}. Focusing on the Six Nations, a high-profile rugby tournament that takes place every year in the months of February and March with the participation of England, Wales, Scotland, Ireland, France and Italy, we explored whether the reported number of domestic abuse cases increase on days when the England national rugby team plays. 
 
-Each tournament year, England plays one match with each of the other five participating countries, and these matches take place almost always during the weekend (Saturday, $N = 37$; Sunday, $N = 11$; Friday, $N = 2$). The most common result for England is to win ($N = 35$), much less frequent are losses ($N = 12$) and draws ($N = 2$).
+Each tournament year, England plays one match with each of the other five participating countries, and these matches take place almost always during the weekend (Saturday, $N = 37$; Sunday, $N = 11$; Friday, $N = 2$). The most common result for England is to win ($N = 35$), much less frequent are losses ($N = 12$), and draws ($N = 2$).
 
 
 Table \ref{rugby} shows no comparable effects for rugby matches on domestic abuse, potentially stemming from differences in timing, media coverage, audience numbers, and the involvement of alcohol between the two tournaments. 
