Draws from an urn

--- a/submission_7/football_DA.tex
+++ b/submission_7/football_DA.tex
@@ -158,7 +158,13 @@ Despite the evident links between alcohol and domestic abuse, the role alcohol p
 
 To test this hypothesis, we investigate whether the daily number of reported alcohol and non-alcohol related domestic abuse cases recorded by the third largest police force in England (West Midlands Police; WMP) between 2010 and 2019 increase on days when the England national team plays in a national football tournament (the FIFA World Cup and UEFA European Football Championship), and whether the effect, if any, depends on the result of the match.
 
- In these tournaments, England match days are allocated randomly (the randomization of fixture is ensured through a process of drawing balls from an urn), making these events a suitable instrument for testing the casual effect of England matches on domestic abuse \AT{They will most certainly say that we can't say causal}. Our dataset covers a decade worth of crime data, allowing us to conduct a thorough investigation of the characteristics and temporal pattern of the domestic abuse perpetrated on England match days, and extend our findings to understand various characteristics of this relationship. We also test the robustness of the effect using various model specifications, time periods, and geographical areas. 
+\citeA{Card2011} had to rely upon the stochastic nature of game outcomes (after controlling for bookmakers expectations) to make a causal inference between unexpected losses in college football and domestic abuse. 
+Here, we exploit the fact that national teams are randomly allocated to slots in the tournament structure.
+These slots are assigned to dates \emph{before} the teams are are allocated.
+Allocation of teams is by the random draw of balls from an urn---the canonical definition of random. 
+Thus we can make causal claims about the effect of England matches on domestic abuse.
+Our dataset covers a decade, allowing us to conduct a thorough investigation of the characteristics and temporal pattern of the domestic abuse perpetrated on England match days, and extend our findings to understand various characteristics of this relationship. 
+We also test the robustness of the effect using various model specifications, time periods, and geographical areas. 
 
 
 
