--- a/submission_7/football_DA.tex
+++ b/submission_7/football_DA.tex
@@ -178,7 +178,7 @@ The WMP records all reported cases in two databases: incidents and crimes. Most 
 
 The incidents dataset contains a list of markers capturing various key aspects of the reported case, which are recorded in the call centre when the case is being reported. Most of these markers are common across police forces in England (e.g., domestic abuse, alcohol, drugs, mental health, etc.; \citeNP{HomeOffice2011}). These then could be used to assess the severity of case (and support the decision as to whether police attendance is required). In contrast, each case in the crimes dataset had been attended by the police, and therefore contains detailed information about the offence that took place, the gender, age, and ethnicity of the victim and offender, and the location and exact time of the crime (the time of the first and last instance of the perpetrated case, as well as the time of reporting is recorded to the minute \AT{not sure if this grammatically correct}). A separate alcohol marker exists in the crimes dataset.
 
-Given that much more information are recorded about crimes than incidents, we decided to restrict our analysis to entries in the crimes dataset (i.e., cases that have been investigated by the police), and use only matching entries from the incidents dataset (if any), which provide additional useful call centre-recorded information about the nature of each case. This allows us to identify if a recorded serious crime (e.g., grievous bodily harm) was domestic abuse-related. However, our main results do not change if we only use information contained in the crimes dataset (i.e., domestic abuse cases that after investigated, did not qualify as a crime) or include both crimes and incidents in the analysis (i.e., domestic abuse cases that had been investigated and suspected domestic abuse cases that had not been investigated).   
+Given that much more information are recorded about crimes than incidents, we decided to restrict our analysis to entries in the crimes dataset (i.e., cases that have been investigated by the police), and use only matching entries from the incidents dataset (if any), which provide additional useful call centre-recorded information about the nature of each case. This allows us to identify if a recorded serious crime (e.g., grievous bodily harm) was domestic abuse-related. However, our main results do not change if we only use information contained in the crimes dataset (i.e., domestic abuse cases that after investigation, did not qualify as a crime) or include both crimes and incidents in the analysis (i.e., domestic abuse cases that had been investigated and suspected domestic abuse cases that had not been investigated).   
 
 We coded each reported case as domestic abuse-related if (1) in the crime dataset the offence description explicitly stated so (either ``domestic violence incident'' or ``coercive/controlling behaviour in a domestic setting'') or (2) one of the linked incident markers (if any) stated ``domestic violence''. This method ensured that we used all information available to us to identify domestic-abuse related cases. The role of the victim and the offender was determined by the police. 
 
