--- a/submission_7/football_DA.tex
+++ b/submission_7/football_DA.tex
@@ -179,13 +179,14 @@ The WMP records all reported cases in two databases: incidents and crimes. Most 
 The incidents dataset contains a list of markers capturing various key aspects of the reported case, which are recorded in the call centre when the case is being reported. Most of these markers are common across police forces in England (e.g., domestic abuse, alcohol, drugs, mental health, etc.; \citeNP{HomeOffice2011}). 
 These then could be used to assess the severity of case (and support the decision as to whether police attendance is required). 
 In contrast, each case in the crimes dataset had been attended by the police, and therefore contains detailed information about the offence that took place, the gender, age, and ethnicity of the victim and offender, and the location and exact time of the crime. 
+The role of the victim and the offender was determined by the police. 
 A separate alcohol marker exists in the crimes dataset.
 
 Given that much more information is recorded about crimes than incidents, we decided to restrict our analysis to entries in the crimes dataset (i.e., cases that have been investigated by the police), and use only matching entries from the incidents dataset (if any), which provide additional useful call centre-recorded information about the nature of each case. 
 This allows us to identify if a recorded serious crime (e.g., grievous bodily harm) was domestic abuse-related. 
 However, our main results do not change if we only use information contained in the crimes dataset (i.e., domestic abuse cases that after investigation, did not qualify as a crime) or include both crimes and incidents in the analysis (i.e., domestic abuse cases that had been investigated and suspected domestic abuse cases that had not been investigated).   
 
-We coded each reported case as domestic abuse-related if (1) in the crime dataset the offence description explicitly stated so (either ``domestic violence incident'' or ``coercive/controlling behaviour in a domestic setting'') or (2) one of the linked incident markers (if any) stated ``domestic violence''. This method ensured that we used all information available to us to identify domestic-abuse related cases. The role of the victim and the offender was determined by the police. 
+We coded each reported case as domestic abuse-related if (1) in the crime dataset the offence description explicitly stated so (either ``domestic violence incident'' or ``coercive/controlling behaviour in a domestic setting'') or (2) one of the linked incident markers (if any) stated ``domestic violence''. This method ensured that we used all information available to us to identify domestic-abuse related cases. 
 
 To determine whether a case was alcohol-related, we again collated information from markers found in the incidents and crimes dataset and created an alcohol flag if any of these markers contained the word ``alcohol''. The main source of information on alcohol-involvement is the crime dataset, where the recording officer has to choose either ``Yes'' or ``No'' to indicate whether the case was alcohol-related. According to the Home Office Counting Rules for Recorded Crime, alcohol-related crimes are defined as ``any notifiable offence (crime) where it is perceived, by the victim or any other person, that the
 effects of alcohol consumption on the offender or victim was an aggravating factor'' \cite{Office2019}. Unfortunately, it is not specified who was under the influence of alcohol (victim, offender, or both). In addition, it is possible that this flag is an underestimation of the true number of alcohol-related cases, as one could reasonably expect it to be more likely that ``No'' will be selected for an alcohol-related case than the other way around, due to human error.
