--- a/submission_7/football_DA.tex
+++ b/submission_7/football_DA.tex
@@ -257,7 +257,9 @@ To investigate the role alcohol plays in the link between England football match
 
 In these regressions, each day in our dataset is an observation (of which there are 3570), and the outcome variable is the number of domestic abuse cases perpetrated on that day (alcohol-related or not). We classified each day in this period as one of the following: England won (England win, $N = 8$), lost (England lost, $N = 8$) or drew (England draw, $N = 6$), a day after an England match day (After England, $N = 22$), any other day during the months of the tournament (Tournament on, $N = 106$), or any other day during the rest of the year (Non-match day, $N = 3420$). Our aim is to understand the extent to which this classification variable can explain the number of alcohol-related and non-alcohol related cases reported to the police.
 
-To control for potential confounders and account for the temporal variability of the number of domestic abuse cases, we also added a set of control variables, including day of the week, month, year, Christmas (covering the period between 24th and 26th of December) and New Year's Eve (1st of January). These holidays are consistently associated with an increased number of domestic abuse cases reported to the police, therefore including these will result in a more precise estimate of the association between football and domestic abuse.
+To control for potential confounders and account for the temporal variability of the number of domestic abuse cases, we also added a set of dummy  variables, including day of the week, calendar month, and year. 
+We included a dummy for Christmas cases (covering the period between 24th and 26th of December) and New Year's Eve cases (in the early morning of 1st of January). 
+These holidays are consistently associated with an increased number of domestic abuse cases reported to the police, therefore including these will result in a more precise estimate of the association between football and domestic abuse.
 
 Given that our outcome variable is a count, we considered using a Poisson or a negative binomial regression model framework. Formally, if $C_i$ is the number of reported cases (alcohol or non-alcohol related) on days $i = 1...N$, then these models can be formally expressed as
 %
