--- a/submission_7/football_DA.tex
+++ b/submission_7/football_DA.tex
@@ -287,7 +287,9 @@ In this analysis, we used the regression framework described in section \ref{mod
 
 \subsection{Binary outcome variable analyses}
 
-To further understand the characteristics of domestic abuse cases perpetrated on England football days, such as whether these cases are more likely to occur in a public location or end in serious injury, we used a logistic regression framework. Given a binary response variable ($Y_{i}$ can either take the value 0 or 1), we wish to model the probability of an event occurring, i.e., $\pi = P(Y = 1)$. In a logistic regression framework, we can model this probability as a function of predictor variables with the equation
+To further understand the characteristics of domestic abuse cases perpetrated on England football days, such as whether these cases are more likely to occur in a public location or end in serious injury, we used a logistic regression framework. 
+Given a binary response variable ($Y_{i}$ can either take the value 0 or 1), we wish to model the probability of an event occurring, i.e., $\pi = P(Y = 1)$. 
+In a logistic regression framework, we can model this probability with the equation
 
 \begin{equation}
 log(\frac{\pi}{1-\pi})= \vect{x_i^{T}}\vect{\beta}
