--- a/submission_7/football_DA.tex
+++ b/submission_7/football_DA.tex
@@ -28,6 +28,7 @@
 \usepackage{adjustbox}
 \usepackage[section]{placeins}
 \usepackage[toc,page]{appendix}
+\usepackage{parskip}
 
 \newcommand{\AT}[1]{\textcolor{red}{#1}}
 \newcommand{\NS}[1]{\textcolor{deeppink2}{#1}}
