--- a/submission_7/football_DA.tex
+++ b/submission_7/football_DA.tex
@@ -30,9 +30,9 @@
 \usepackage[toc,page]{appendix}
 \usepackage{parskip}
 
-\newcommand{\AT}[1]{\textcolor{red}{#1}}
-\newcommand{\NS}[1]{\textcolor{deeppink2}{#1}}
-\newcommand{\TM}[1]{\textcolor{springgreen3}{#1}}
+\newcommand{\AT}[1]{\textcolor{red}{AT: #1}}
+\newcommand{\NS}[1]{\textcolor{deeppink2}{NS: #1}}
+\newcommand{\TM}[1]{\textcolor{springgreen3}{TM: #1}}
 
 
 
@@ -389,7 +389,7 @@ Our crime dataset further allows us to explore whether England games have simila
 \AT{I think we should say something about how detecting alcohol-involvement varies by crime type- e.g., for domestic abuse we have greater confidence in identifying alcohol-related cases as opposed to property-related crimes}
 
 
-Table \ref{othercrimes} shows the results for these three types of criminal behaviours, by alcohol-involvement. Compared to non-match days, hate crimes and incidents with no alcohol-involvement increase by 12\%, 95\% CI [3\%--22\%], during the months of the tournaments. Similarly, compared to non-match days, alcohol-related thefts and robberies (property-related offences) increase by 10\%, 95\% CI [1\%--19\%], when the tournament is on, and by 29\%, 95\% CI [0\%--66\%], when England wins, although these estimates are not very precise (demonstrated by the width of the confidence intervals), due to the relatively small number of alcohol-related theft and robbery cases. In contrast, the effect of an England win on alcohol-related cases clearly extends to other, non-domestic violent offences, resulting in a 47\%, 95\% CI [19\%--83\%], increase compared to non-match days. While it is possible that misclassified domestic abuse cases contribute to this result (e.g, if the victim chooses not to disclose any relationship to the offender), these results suggests that the increase in alcohol-related violence following an England victory is not limited to domestic settings.
+Table \ref{othercrimes} shows the results for these three types of criminal behaviours, by alcohol-involvement. Compared to non-match days, hate crimes and incidents with no alcohol-involvement increase by 12\%, 95\% CI [3\%--22\%], during the months of the tournaments. Similarly, compared to non-match days, alcohol-related thefts and robberies (property-related offences) increase by 10\%, 95\% CI [1\%--19\%], when the tournament is on, and by 29\%, 95\% CI [0\%--66\%] \NS{CI in table extends just below 1, so how is this significant at 5\% level?}, when England wins, although these estimates are not very precise (demonstrated by the width of the confidence intervals), due to the relatively small number of alcohol-related theft and robbery cases. In contrast, the effect of an England win on alcohol-related cases clearly extends to other, non-domestic violent offences, resulting in a 47\%, 95\% CI [19\%--83\%], increase compared to non-match days. While it is possible that misclassified domestic abuse cases contribute to this result (e.g, if the victim chooses not to disclose any relationship to the offender), these results suggests that the increase in alcohol-related violence following an England victory is not limited to domestic settings. \NS{What happened to the analysis showing that this was especially true for male-to-female abuse?}
 
 
 
