--- a/submission_7/football_DA.tex
+++ b/submission_7/football_DA.tex
@@ -31,7 +31,7 @@
 \usepackage{parskip}
 
 \newcommand{\AT}[1]{\textcolor{red}{AT: #1}}
-\newcommand{\NS}[1]{\textcolor{deeppink2}{NS: #1}}
+\newcommand{\NS}[1]{\textcolor{green}{NS: #1}}
 \newcommand{\TM}[1]{\textcolor{springgreen3}{TM: #1}}
 
 
@@ -501,7 +501,7 @@ Notes:
 \subsection{Previous evidence}
 
 
-A previous study by \cite{Kirby2014} found that an England loss results in the most pronounced increase in domestic abuse (38\%), and a win or draw have a slightly smaller effect (26\%). They used daily counts of IPV in Lancashire from the months of the 2002, 2006, 2010 World Cups. Upon re-analysing their data by treating wins and draws as two separate variables (resulting in an improved model fit, see Table \ref{kirbyrep1}), we see a roughly similar effect for wins (45\%, 95\% CI [28\%--64\%]) and losses (39\%, 95\% CI [18\%--64\%]), and no effect when England draws. Separating wins and draws clearly improves the fit of the model, demonstrated by the reduction in the Bayesian and Akaike Information Criteria (BIC and AIC, respectively). However, the estimated effect of an England loss is insensitive to this change. In conclusion, our reanalysis replicates the win effect seen in the West Midlands data, though the absence of a loss effect remains a stark difference between the two studies.
+A previous study by \citeA{Kirby2014} found that an England loss results in the most pronounced increase in domestic abuse (38\%), and a win or draw have a slightly smaller effect (26\%). They used daily counts of IPV in Lancashire from the months of the 2002, 2006, 2010 World Cups. Upon re-analysing their data by treating wins and draws as two separate variables (see Table \ref{kirbyrep1}), we see a roughly similar effect for wins (45\%, 95\% CI [28\%--64\%]) and losses (39\%, 95\% CI [18\%--64\%]), and no effect when England draws. Separating wins and draws clearly improves the fit of the model, demonstrated by the reduction in the Bayesian and Akaike Information Criteria (BIC and AIC, respectively). However, the estimated effect of an England loss is insensitive to this change. In conclusion, our reanalysis replicates the win effect seen in the West Midlands data, though the absence of a loss effect remains a stark difference between the two studies.
 
 \begin{table*}[!htb]
 \centering
