data section updated

--- a/submission_7/football_DA.tex
+++ b/submission_7/football_DA.tex
@@ -175,11 +175,14 @@ Our dataset comprises all incidents and crimes recorded by the West Midlands Pol
 
 The WMP records all reported cases in two databases: incidents and crimes. The incidents database records all reports from officers and the public to call centres and police stations. The crimes database includes all cases which, after initial investigation are found to meet the defenition of a notifiable offence \citeNP{HomeOffice2019}, or fall into one of the special categories of "non-crime". These special categories include rape, domestic abuse, child abuse, racially or religiously aggravated cases, and are recorded (e.g. as ``domestic violence incident - non crime'') in the crimes database, even if the investigation finds that they do not qualify as a notifiable offence (e.g. due to lack of evidence).
  
-We focus our analyses on the crimes database, as these have been investigated by police. These records therefore contain more data and are more robust and reliable than incident logs. Officers record the age, gender and ethnicity for both victim and offender, as well as the location and exact time of the crime. 
+We focus our analyses on the crimes database, as these have been investigated by police. These records therefore contain more data and are more robust and reliable than incident logs. Officers record the age, gender and ethnicity for both victim and offender (note that the victim offender roles are judged and defined by the recording officer), as well as the location and exact time of the crime. 
+In identifying which crimes constitute domestic abuse we include all crime records for specific domestic abuse crimes and non-crimes. There are also a number of crimes which are recorded as non-domestic abuse offences, but which are, or result from domestic abuse. For example, offences of grievous bodily harm. To ensure we identify such cases, we link the records in the crimes database to that of the incidents data. The incidents database contains flags for a number of properties of the incidents \citeNP{HomeOffice2011}, one of which is domestic abuse. Thus, any non-domestic abuse crimes were identified as domestic abuse if they also had such a domestic abuse flag in a linked incident record.
+
+When identifying whether alcohol was involved, we primarily rely upon the specific alcohol flag in the crime record. When an officer records a crime, they must select any flags that are relevant to the case and one of these is "Alcohol Involvement". THe defenition for this is prescribed by the UK home office ``any notifiable offence (crime) where it is perceived, by the victim or any other person, that the effects of alcohol consumption on the offender or victim was an aggravating factor'' \cite{Office2019}. Note that this definition applies to the incident in general, not to either the offender or victim specifically. Since this flag must be actively selected by the recording officer, there is a potential for under reporting. To ameliorate this, we also examined the free text records of the associated incident log. If any linked incident record contained the keyword "alcohol*" \TM{Which sepcific set of keywords did we use?} then it was also identified as alcohol related.
  
  
  
- 
+ \TM{ I think get rid of all of this:
  
 Most reported cases will be initially recorded as an incident (and then later might be also recorded as a crime after investigation), with a smaller fraction immediately recorded as crime (if it is clear that it meets the criteria for notifiable offences, \citeNP{HomeOffice2019} \citeNP{HomeOffice2019}). For this reason, some recorded crimes will have matching incident entries, while others will not. As an exception, specific types of reported cases (e.g., rape, domestic abuse, child abuse, racially or religiously aggravated cases) that do not qualify as a crime after being investigated (e.g., due to lack of evidence), still get recorded in the crimes database with the indicator ``non crime'' (e.g., ``domestic violence incident - non crime'').
 
@@ -197,7 +200,7 @@ However, our main results do not change if we only use information contained in 
 We coded each reported case as domestic abuse-related if (1) in the crime dataset the offence description explicitly stated so (either ``domestic violence incident'' or ``coercive/controlling behaviour in a domestic setting'') or (2) one of the linked incident markers (if any) stated ``domestic violence''. This method ensured that we used all information available to us to identify domestic-abuse related cases. 
 
 To determine whether a case was alcohol-related, we again collated information from markers found in the incidents and crimes dataset and created an alcohol flag if any of these markers contained the word ``alcohol''. The main source of information on alcohol-involvement is the crime dataset, where the recording officer has to choose either ``Yes'' or ``No'' to indicate whether the case was alcohol-related. According to the Home Office Counting Rules for Recorded Crime, alcohol-related crimes are defined as ``any notifiable offence (crime) where it is perceived, by the victim or any other person, that the
-effects of alcohol consumption on the offender or victim was an aggravating factor'' \cite{Office2019}. Unfortunately, it is not specified who was under the influence of alcohol (victim, offender, or both). In addition, it is possible that this flag is an underestimation of the true number of alcohol-related cases, as one could reasonably expect it to be more likely that ``No'' will be selected for an alcohol-related case than the other way around, due to human error.
+effects of alcohol consumption on the offender or victim was an aggravating factor'' \cite{Office2019}. Unfortunately, it is not specified who was under the influence of alcohol (victim, offender, or both). In addition, it is possible that this flag is an underestimation of the true number of alcohol-related cases, as one could reasonably expect it to be more likely that ``No'' will be selected for an alcohol-related case than the other way around, due to human error. }
 
  Overall there were 427,351 reported cases of domestic abuse in this 10-year period, comprising 17\% of all recorded crimes and incidents. Of these cases, 26\% were alcohol-related (in contrast, only 9\% of non domestic abuse cases are alcohol-related). In the period between 2010 and 2018, the daily rate of non-alcohol related domestic incidents falls between 1.42--3.95 cases per 100,000 individuals, whereas the daily rate of alcohol-related cases falls between 0.84--1.67 cases per 100,000 individuals (the overall rate falls between 2.4 and 5.01 per 100,000 individuals). 
 
